fix alignment

--- a/iteration2/game1/css/style.css
+++ b/iteration2/game1/css/style.css
@@ -20,14 +20,6 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
-}
-
-.icon {
-    position: absolute;
-    left: 0;
-    display: inline-block;
-    vertical-align: top;
 }
 
 li div {
